...
                                                        <rect key="frame" x="0.0" y="0.0" width="414" height="612"/>
                                                        <subviews>
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Xk-4V-aM2">
                                                                <rect key="frame" x="16" y="37" width="58.5" height="24"/>
                                                                <fontDescription key="fontDescription" name="ProximaNova-Medium" family="Proxima Nova" pointSize="24"/>
...
                                                                <state key="normal">
                                                                    <attributedString key="attributedTitle">
                                                                        <fragment content="bob@example.com">
                                                                            <attributes>
                                                                                <color key="NSColor" red="0.42745098039215684" green="0.45882352941176469" blue="0.51764705882352935" alpha="1" colorSpace="calibratedRGB"/>
...
                                                                </constraints>
                                                            </imageView>
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Catalog" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EK8-5I-L48">
                                                                <rect key="frame" x="52" y="38" width="34.5" height="10"/>
                                                                <fontDescription key="fontDescription" name="ProximaNova-Medium" family="Proxima Nova" pointSize="10"/>
...
                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qqy-9j-AZV">
                                                                <rect key="frame" x="0.0" y="0.0" width="138" height="60"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="Catalog-tab-item"/>
                                                                <connections>
                                                                    <action selector="catalogButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="sze-CN-JrW"/>
...
                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Bm-7Q-4G8">
                                                                <rect key="frame" x="0.0" y="0.0" width="138" height="60"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="Cart-tab-item"/>
                                                                <connections>
                                                                    <action selector="cartButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="n3b-iE-Zjh"/>
...
                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tX7-OO-t1u">
                                                                <rect key="frame" x="0.0" y="0.0" width="138" height="60"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="More-tab-item"/>
                                                                <connections>
                                                                    <action selector="moreButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="oRf-ao-Nok"/>
...
