...
                                        <rect key="frame" x="0.0" y="60" width="414" height="694"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Items" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eWY-lc-4dB">
                                                <rect key="frame" x="159.5" y="70" width="95" height="24"/>
                                                <fontDescription key="fontDescription" name="ProximaNova-Medium" family="Proxima Nova" pointSize="24"/>
...
                                        <rect key="frame" x="0.0" y="60" width="414" height="581"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Cart" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qAV-ST-PqX">
                                                <rect key="frame" x="16" y="24" width="82.5" height="24"/>
                                                <fontDescription key="fontDescription" name="ProximaNova-Medium" family="Proxima Nova" pointSize="24"/>
...
                                                                            <rect key="frame" x="269" y="192" width="97" height="32"/>
                                                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                                                                            <state key="normal" title="Remove Item">
                                                                                <color key="titleColor" red="0.094117647058823528" green="0.34509803921568627" blue="0.22745098039215686" alpha="1" colorSpace="calibratedRGB"/>
                                                                            </state>
                                                                            <accessibility key="accessibilityConfiguration" identifier="RemoveItem-button"/>
                                                                        </button>
                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sauce Labs Backpack" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ahR-a
                                                                            <rect key="frame" x="180" y="0.0" width="202" height="16"/>
                                                                            <fontDescription key="fontDescription" name="ProximaNova-Medium" family="Proxima Nova" pointSize="16"/>
...
                                                                                        <constraint firstAttribute="width" constant="40" id="m34-IH-tac"/>
                                                                                    </constraints>
                                                                                    <state key="normal" image="SubtractMinus Icons"/>
                                                                                    <accessibility key="accessibilityConfiguration" identifier="Subtract-button"/>
                                                                                </button>
...
                                                                                        <constraint firstAttribute="width" constant="40" id="eua-Ro-PCQ"/>
                                                                                    </constraints>
                                                                                    <state key="normal" image="AddPlus Icons"/>
                                                                                    <accessibility key="accessibilityConfiguration" identifier="Add-button"/>
                                                                                </button>
...
                                                <rect key="frame" x="16" y="47" width="382" height="48"/>
                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <accessibility key="accessibilityConfiguration" identifier="ProceedToCheckout"/>
                                                <fontDescription key="fontDescription" name="ProximaNova-Medium" family="Proxima Nova" pointSize="18"/>
                                                <state key="normal" title="Proceed To Checkout" backgroundImage="GreenButton Icons">
...
                                                                </constraints>
                                                            </imageView>
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Catalog" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gev-5A-p0c">
                                                                <rect key="frame" x="52" y="38" width="34.5" height="10"/>
                                                                <fontDescription key="fontDescription" name="ProximaNova-Medium" family="Proxima Nova" pointSize="10"/>
...
                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Fs-Rk-M4h">
                                                                <rect key="frame" x="0.0" y="0.0" width="138" height="60"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="Catalog-tab-item"/>
                                                                <connections>
                                                                    <action selector="catalogButton:" destination="90b-TK-aLh" eventType="touchUpInside" id="MFO-Hs-VCK"/>
...
                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SFF-5q-RzJ">
                                                                <rect key="frame" x="0.0" y="0.0" width="138" height="60"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="Cart-tab-item"/>
                                                                <connections>
                                                                    <action selector="cartButton:" destination="90b-TK-aLh" eventType="touchUpInside" id="z97-j0-I28"/>
...
                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Efz-E5-74O">
