appId: com.saucelabs.mydemo.app.ios
---
- launchApp:
    clearState: true
- loginWithCredentials:
    email: ${email}
    password: ${password}
- tapOn: ${email}
- tapOn: "Login"
- assertVisible: "Catalog"
---
- loginWithInvalidEmail:
    email: ${email}
    password: ${password}
- tapOn: ${email}
- tapOn: "Login"
- assertVisible: "Catalog"
---
- loginWithEmptyFields:
- tapOn: "Login"
- assertVisible: "Validation Error!"
---
- login:
    email: ${email}
- tapOn: ${email}
- tapOn: "Login"
- assertVisible: "Catalog"
