appId: com.saucelabs.mydemo.app.ios
---
- launchApp:
    clearState: true
- tapOn: "bob@example.com"
- tapOn: "Login"
- tapOn: "Catalog-tab-item"
- tapOn: "ProductItem"
- tapOn: "AddToCart"
- tapOn: "Cart-tab-item"
- tapOn: "AddPlus Icons"
- assertVisible: "2"
- tapOn: "Remove Item"
- assertVisible: "1"
- tapOn: "Remove Item"
- assertVisible: "No Items"
