appId: com.saucelabs.mydemo.app.ios
---
- launchApp:
    clearState: true
- tapOn: "bob@example.com"
- tapOn: "Login"
- tapOn: "Catalog-tab-item"
- tapOn: "ProductItem"
- tapOn: "AddToCart"
- tapOn: "Catalog-tab-item"
- tapOn: "ProductItem"
- tapOn: "AddToCart"
- tapOn: "Catalog-tab-item"
