appId: com.saucelabs.mydemo.app.ios
---
- launchApp:
    clearState: true
- tapOn: "bob@example.com"
- tapOn: "Login"
- tapOn: "Catalog-tab-item"
- tapOn: "ProductItem"
- assertVisible: "Product Highlights"
- assertVisible: "$ 29.99"
- tapOn: "Catalog-tab-item"
