appId: com.saucelabs.mydemo.app.ios
---
- viewCart:
- tapOn: "Cart-tab-item"
---
- verifyCartEmpty:
- assertVisible: "Oh no! Your cart is empty"
- assertVisible: "No Items"
---
- verifyCartContains:
    productName: ${productName}
- assertVisible: ${productName}
---
- verifyCartSubtotal:
    expectedPrice: ${expectedPrice}
- assertVisible: ${expectedPrice}
---
- verifyCartItemCount:
    expectedCount: ${expectedCount}
- assertVisible: ${expectedCount}
---
- removeFirstItem:
- tapOn: "Remove Item"
---
- removeAllItems:
- repeat:
    count: 10
    while:
      visible: "Remove Item"
- tapOn: "Remove Item"
---
- proceedToCheckout:
- tapOn: "ProceedToCheckout"
---
- backToCatalog:
- tapOn: "Products"
