appId: com.saucelabs.mydemo.app.ios
---
- navigateToCatalog:
- tapOn: "Catalog-tab-item"
- assertVisible: "Catalog"
---
- openProduct:
    productName: ${productName}
- tapOn: ${productName}
- assertVisible: "Product Highlights"
---
- addToCart:
- tapOn: "AddToCart"
---
- goToCart:
- tapOn: "Cart-tab-item"
- assertVisible: "My Cart"
---
- goToMoreMenu:
- tapOn: "More-tab-item"
- assertVisible: "Menu"
---
- goToCartFromTab:
- tapOn: "Cart-tab-item"
---
- goToCatalogFromTab:
- tapOn: "Catalog-tab-item"
